..F....... [ZBX-10736] fixed overlapping of row and table borders
git-svn-id: svn://svn.zabbix.com/trunk@60786 f4e7fd02-d210-4e34-a1e0-d4093fb66cc2

--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -587,6 +587,7 @@ footer {
 .list-table {
 	width: 100%;
 	background-color: $ui-bg-color;
+	border-collapse: separate;
 	border: 1px solid $ui-border-color;
 
 	thead th {
